added link to GitHub

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h1>World-clock</h1>
     <footer>
       This project was coded by Rediat Tadesse and is
-      <a herf="" target="_ _blank"> open sourced on Github </a>
+      <a herf="https://github.com/redtad1/world-clock" target="_blank">
+        open sourced on GitHub
+      </a>
     </footer>
     <script src="javascript/index.js"></script>
   </body>
