added basic HTML

--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <title>World-clock</title>
   </head>
   <body>
-    <h1>World-clock</h1>
+    <div class="container">
+      <h1>World-clock</h1>
+      <select name="" id="">
+        <option value="">Select a City..</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Aucland</option>
+      </select>
+      <div class="city">
+        <h2>Los Angeles 🇺🇸</h2>
+        <div class="date">August 12th 2023</div>
+        <div class="time">12:45:06 AM</div>
+      </div>
+      <div class="city">
+        <h2>Addis Abeba 🇪🇹</h2>
+        <div class="date">August 12th 2023</div>
+        <div class="time">12:45:06 PM</div>
+      </div>
+    </div>
     <footer>
       This project was coded by Rediat Tadesse and is
       <a herf="https://github.com/redtad1/world-clock" target="_blank">
