--- a/index.html
+++ b/index.html
@@ -17,14 +17,21 @@
         <option value="">Aucland</option>
       </select>
       <div class="city">
-        <h2>Los Angeles 🇺🇸</h2>
-        <div class="date">August 12th 2023</div>
-        <div class="time">12:45:06 AM</div>
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">August 12th 2023</div>
+        </div>
+        <div class="time">
+          12:45:06
+          <small> AM </small>
+        </div>
       </div>
       <div class="city">
-        <h2>Addis Abeba 🇪🇹</h2>
-        <div class="date">August 12th 2023</div>
-        <div class="time">12:45:06 PM</div>
+        <div>
+          <h2>Addis Abeba 🇪🇹</h2>
+          <div class="date">August 12th 2023</div>
+        </div>
+        <div class="time">12:45:06 <small>PM</small></div>
       </div>
     </div>
     <footer>
