--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World-clock</title>
   </head>
   <body>
@@ -14,9 +16,9 @@
         <option value="">Select a City..</option>
         <option value="">London</option>
         <option value="">New York</option>
-        <option value="">Aucland</option>
+        <option value="">Auckland</option>
       </select>
-      <div class="city">
+      <div class="city" id="angel">
         <div>
           <h2>Los Angeles 🇺🇸</h2>
           <div class="date">August 12th 2023</div>
@@ -26,7 +28,7 @@
           <small> AM </small>
         </div>
       </div>
-      <div class="city">
+      <div class="city" id="addis">
         <div>
           <h2>Addis Abeba 🇪🇹</h2>
           <div class="date">August 12th 2023</div>
