--- a/index.html
+++ b/index.html
@@ -12,28 +12,30 @@
   <body>
     <div class="container">
       <h1>World-clock</h1>
-      <select name="" id="">
+      <select name="" id="city">
         <option value="">Select a City..</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Auckland</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Africa/Johannesburg">Johannesburg</option>
       </select>
-      <div class="city" id="angel">
-        <div>
-          <h2>Los Angeles 🇺🇸</h2>
-          <div class="date">August 12th 2023</div>
+      <div id="cities">
+        <div class="city" id="angel">
+          <div>
+            <h2>Los Angeles 🇺🇸</h2>
+            <div class="date">August 12th 2023</div>
+          </div>
+          <div class="time">
+            12:45:06
+            <small> AM </small>
+          </div>
         </div>
-        <div class="time">
-          12:45:06
-          <small> AM </small>
+        <div class="city" id="addis">
+          <div>
+            <h2>Addis Abeba 🇪🇹</h2>
+            <div class="date">August 12th 2023</div>
+          </div>
+          <div class="time">12:45:06 <small>PM</small></div>
         </div>
-      </div>
-      <div class="city" id="addis">
-        <div>
-          <h2>Addis Abeba 🇪🇹</h2>
-          <div class="date">August 12th 2023</div>
-        </div>
-        <div class="time">12:45:06 <small>PM</small></div>
       </div>
     </div>
     <footer>
