--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="Africa/Johannesburg">Johannesburg</option>
+        <option value="Europe/Helsinki">Helsinki</option>
+        <option value="Asia/Dubai">Dubai</option>
       </select>
       <div id="cities">
         <div class="city" id="angel">
