--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1>World-clock</h1>
       <select name="" id="city">
         <option value="">Select a City..</option>
+        <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="Africa/Johannesburg">Johannesburg</option>
@@ -40,11 +41,14 @@
         </div>
       </div>
     </div>
+
     <footer>
-      This project was coded by Rediat Tadesse and is
-      <a herf="https://github.com/redtad1/world-clock" target="_blank">
-        open sourced on GitHub
-      </a>
+      This project was coded by <strong>👩‍💻Rediat Tadesse</strong> and is
+      <a
+        href="https://github.com/redtad1/world-clock/commits?author=redtad1"
+        target="_blank"
+        >open sourced on GitHub</a
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
