--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
-        <option value="Africa/Johannesburg">Johannesburg</option>
         <option value="Europe/Helsinki">Helsinki</option>
         <option value="Asia/Dubai">Dubai</option>
       </select>
@@ -29,6 +28,15 @@
           </div>
           <div class="time">
             12:45:06
+            <small> AM </small>
+          </div>
+        </div>
+        <div class="city" id="south">
+          <div>
+            <h2>Johannesburg🇿🇦</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time">
             <small> AM </small>
           </div>
         </div>
