--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="cities">
         <div class="city" id="angel">
           <div>
-            <h2>Los Angeles 🇺🇸</h2>
+            <h2>🌴 Los Angeles 🇺🇸</h2>
             <div class="date">August 12th 2023</div>
           </div>
           <div class="time">
@@ -33,7 +33,7 @@
         </div>
         <div class="city" id="south">
           <div>
-            <h2>Johannesburg🇿🇦</h2>
+            <h2>🏔 Johannesburg🇿🇦</h2>
             <div class="date"></div>
           </div>
           <div class="time">
@@ -42,7 +42,7 @@
         </div>
         <div class="city" id="addis">
           <div>
-            <h2>Addis Abeba 🇪🇹</h2>
+            <h2>🌼 Addis Abeba 🇪🇹</h2>
             <div class="date">August 12th 2023</div>
           </div>
           <div class="time">12:45:06 <small>PM</small></div>
@@ -57,6 +57,10 @@
         target="_blank"
         >open sourced on GitHub</a
       >
+      and hosted on
+      <a href="https://joyful-fairy-4650aa.netlify.app/" target="_blank">
+        Netlify
+      </a>
     </footer>
     <script src="javascript/index.js"></script>
   </body>
